--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-drag-and-drop": "^3.0.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "spectre.css": "^0.5.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
